Committing project edits

--- a/index.html
+++ b/index.html
@@ -2,38 +2,132 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Best City Guide</title>
-		<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+		<title>Sarah R. Barnes</title>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Merriweather:400,400i,700,700i' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container clearfix">
-				<h1 class="name"><a href="#">Sarah R. Barnes</a></h1>
-				<ul class="main-nav">
-					<li><a href="#">home</a></li>
-					<li><a href="#portfolio">portfolio</a></li>
-					<li><a href="#contact">contact</a></li>
-				</ul>
+				<div class="col">
+					<h1 class="name"><a href="#">Sarah R. Barnes</a></h1>
+					<nav class="main-nav">
+						<ul>
+							<li><a href="#">home</a></li>
+							<li><a href="#portfolio">portfolio</a></li>
+							<li><a href="#skills">skills</a></li>
+							<li><a href="#contact">contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header><!--/.main-header-->
-		<main class="container clearfix">
-			<section>
-				<figure>
-					<img src="img/responsive-layout-profile.png" alt="Project portfolio image of a person's face.">
-				</figure>
+		<main>
+			<section id="intro">
+				<div class="container">
+					<div class="row medium-two clearfix">
+						<div class="col push">
+							<figure>
+								<img src="img/responsive-layout-profile.png" alt="Project portfolio image of a person's face.">
+							</figure>
+						</div>
+						<div class="col pull">
+							<p>Hi! I'm a front-end developer who loves responsive design and CSS. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+						</div>
+					</div>
+				</div>
 			</section>
+
 			<section id="portfolio">
-				<h2>portfolio</h2>
-				
+				<div class="container">
+					<h2 class="section-heading">Portfolio</h2>
+					<div class="row medium-two large-three clearfix">
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-1.png" alt="Image contains a screenshot of a marketing page.">
+							</figure>
+							<h3>Marketing Page</h3>
+							<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+						</div>
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-2.png" alt="Image contains a screenshot of a search page.">
+							</figure>
+							<h3>Search Page</h3>
+							<p>This project searches through a specific database to find information that the user is trying to look up.</p>
+						</div>
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-3.png" alt="Image contains a screenshot of a travel app.">
+							</figure>
+							<h3>Travel App</h3>
+							<p>This project compares travel times based on different transportation method and tells you the best one.</p>
+						</div>
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-4.png" alt="Image contains a screenshot of a map page.">
+							</figure>
+							<h3>Map of Favorite Spots</h3>
+							<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+						</div>
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-5.png" alt="Image contains a screenshot of a photo gallery page.">
+							</figure>
+							<h3>Photo Gallery</h3>
+							<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+						</div>
+						<div class="col">
+							<figure>
+								<img src="img/portfolio-6.png" alt="Image contains a screenshot of a calculator page.">
+							</figure>
+							<h3>Calculator</h3>
+							<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="skills">
+				<div class="container">
+					<h2 class="section-heading">Skills</h2>
+					<ul class="skills-list">
+				        <li>HTML</li>
+				        <li>CSS/SCSS</li>
+						<li>WordPress</li>
+				        <li>Foundation</li>
+						<li>Bootstrap</li>
+				        <li>PHP</li>
+			        </ul>
+				</div>
 			</section>
 			<section id="contact">
-				<h2>Contact</h2>
+				<div class="container clearfix">
+					<div class="col">
+						<h2 class="section-heading">Contact</h2>
+						<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+
+						<p class="blue-text">Phone <strong><a href="tel:+11115551234">+1 (111)555-1234</a></strong></p>
+						<p class="blue-text">Email <strong><a href="mailto:email@yoursite.com">email@yoursite.com</a></strong></p>
+					</div>
+				</div>
 			</section>
 		</main>
 		<footer class="main-footer">
-			<span>&copy;2019</span>
+			<div class="container clearfix">
+				<div class="col">
+					<span class="name"><a href="#top">Sarah R. Barnes</a></span>
+					<span class="footer-nav hide-for-medium-up"><a href="#top">Back To Top</a></span>
+					<nav class="footer-nav hide-for-small">
+						<ul>
+							<li><a href="#top">home</a></li>
+							<li><a href="#portfolio">portfolio</a></li>
+							<li><a href="#skills">skills</a></li>
+							<li><a href="#contact">contact</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
